--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RPP Koding - SMP Negeri 2 Purwantoro</title>
+  <title>RPP Berbasis Koding dan AI - SMP Negeri 2 Purwantoro</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
     * {margin: 0; padding: 0; box-sizing: border-box;}
@@ -41,6 +41,7 @@
     <header>
       <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Logo_Sekolah.png" alt="Logo Sekolah" class="logo">
       <h1>RENCANA PELAKSANAAN PEMBELAJARAN (RPP)</h1>
+      <h2>SMP NEGERI 2 PURWANTORO (RPP)</h2>
       <p class="subtitle">Mata Pelajaran Informatika - Sistem Komputer</p>
     </header>
 
@@ -69,10 +70,10 @@
       <p><strong>Guru:</strong> Muh Ichsan, S.Pd</p>
       <p><strong>NIP Guru:</strong> 196903311998021002</p>
       <p><strong>Kepala Sekolah:</strong> Nanang Bachtiar, S.Pd, M.Pd</p>
-      <p><strong>NIP Kepala Sekolah:</strong> 1234567890</p>
-      <p><strong>Kelas/Semester:</strong> VIII / Genap</p>
+      <p><strong>NIP Kepala Sekolah:</strong> 197201162005011008</p>
+      <p><strong>Kelas/Semester:</strong> VIII / Ganjil</p>
       <p><strong>Materi Pokok:</strong> Sistem Komputer</p>
-      <p><strong>Alokasi Waktu:</strong> 2 JP (2 kali Pertemuan)</p>
+      <p><strong>Alokasi Waktu:</strong> 90 Menit  (2 kali Pertemuan)</p>
     </section>
 
     <!-- CP -->
@@ -102,7 +103,7 @@
         <li>Guru menyampaikan tujuan pembelajaran hari ini.</li>
         <li>Apersepsi: guru menanyakan perangkat yang biasa digunakan siswa dan menghubungkannya dengan konsep sistem komputer.</li>
       </ol>
-      <p><strong>Kegiatan Inti (55 menit)</strong></p>
+      <p><strong>Kegiatan Inti (40 menit)</strong></p>
       <ol>
         <li>Guru menjelaskan komponen sistem komputer (hardware, software, brainware).</li>
         <li>Siswa mengamati gambar/skema sistem komputer, lalu berdiskusi kelompok untuk mengidentifikasi fungsinya.</li>
@@ -123,7 +124,7 @@
         <li>Apersepsi: guru menunjukkan contoh aplikasi AI (Google Translate, Chatbot, Teachable Machine).</li>
         <li>Guru menyampaikan tujuan pembelajaran.</li>
       </ol>
-      <p><strong>Kegiatan Inti (55 menit)</strong></p>
+      <p><strong>Kegiatan Inti (40 menit)</strong></p>
       <ol>
         <li>Guru menjelaskan pengertian Artificial Intelligence (AI).</li>
         <li>Diskusi kelompok: siswa menyebutkan manfaat AI dalam kehidupan sehari-hari.</li>
