--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <header>
       <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Logo_Sekolah.png" alt="Logo Sekolah" class="logo">
       <h1>RENCANA PELAKSANAAN PEMBELAJARAN (RPP)</h1>
-      <h2>SMP NEGERI 2 PURWANTORO (RPP)</h2>
+      <h2>SMP NEGERI 2 PURWANTORO</h2>
       <p class="subtitle">Mata Pelajaran Informatika - Sistem Komputer</p>
     </header>
 
